--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name ="teitter:card content="summary"/>
+  <meta name ="twitter:card content="summary"/>
   <meta
   property="og:title"
   content="https://im-jia.github.io/assessment/assessment.html"
