--- a/assessment.html
+++ b/assessment.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name ="twitter:card content="summary"/>
   <meta
-  property="og:"
+  property="og:url"
   content="https://im-jia.github.io/assessment/assessment.html"
   />
   <meta property = "og:title" content="あなたのいいところ診断"/>
