--- a/assessment.html
+++ b/assessment.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name ="twitter:card content="summary"/>
+  <meta name ="twitter:card" content="summary"/>
   <meta
   property="og:url"
   content="https://im-jia.github.io/assessment/assessment.html"
