--- a/assessment.html
+++ b/assessment.html
@@ -2,18 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name ="twitter:card" content="summary"/>
-  <meta
-  property="og:url"
-  content="https://im-jia.github.io/assessment/assessment.html"
-  />
-  <meta property = "og:title" content="あなたのいいところ診断"/>
-  <meta
-  property="og:description"
-  content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
-  />     
   <link rel="stylesheet" href="assessment.css" />
-  <title>あなたのいいところ診断</title>
+  <title>im-jiaあなたのいいところ診断</title>
 </head>
 
 <body>
@@ -25,4 +15,4 @@
   <div id="tweet-area"></div>
   <script src="assessment.js"></script>
 </body>
-</html
+</html>
