--- a/assessment.html
+++ b/assessment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="assessment.css" />
-  <title>im-jiaあなたのいいところ診断</title>
+  <title>im-jiaが作ったあなたのいいところ診断</title>
 </head>
 
 <body>
